--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@ function set_width() {
         * {cursor: url(http://www.rw-designer.com/cursor-view/91845.png), default} 
 /* TEXT HIGHLIGHT */
         ::selection {
-  background: #ffb7b7; /* WebKit/Blink Browsers */
-          color: red
+  background: cyan; /* WebKit/Blink Browsers */
+          color: blue
 }
 ::-moz-selection {
-  background: #ffb7b7; /* Gecko Browsers */
-         color: red
+  background: cyan; /* Gecko Browsers */
+         color: blue
 }
 /* FONTS */
 @font-face {
