added album template

--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
       <p2>also</p2>
       <br>
   <p1>heres some</p1><a href="https://help.flourish.studio/article/288-how-to-use-custom-html-and-css#useful-css-properties" target="_blank"><span class="lhover"> free resources for creators</span></a><p1> including VSTs & synths <br> dont pay for things if u dont have to LOL</p1>
-   
- <img src="LINKLINKLINK" alt="album1" class="lhover">     
       
+ <br><br><br><br><br><br><br> 
+   <p3>things continue to happen</p3><br>   
+<a href="https://abezuo.github.io/martbro/">
+  <img src="https://render.fineartamerica.com/images/rendered/square-dynamic/small/images/artworkimages/mediumlarge/2/red-square-thomas-woolworth.jpg" class="lhover">
+  </a>
+      <br>
+  <p2>2022</p2>
       
   <br><br><br><br><br><br><br><br><br><br>
   <br><br><br><br><br><br><br><br><br><br>
