updated album link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  <br><br><br><br><br>
   
    <p3>things continue to happen</p3><br>   
-<a href="https://abezuo.github.io/martbro/">
+<a href="https://abezuo.github.io/cont-happen/">
   <img src="https://render.fineartamerica.com/images/rendered/square-dynamic/small/images/artworkimages/mediumlarge/2/red-square-thomas-woolworth.jpg" alt="album cover" class="lhover">
   </a>
   
