--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ function set_width() {
       my music
     </h1>
       <p1>
-        i'm still in the process of deciding where to host my music for more accessability, but regardless everything i'm working on (including smaller projects) will be always be here on my site as well.
+        i'm still in the process of deciding where to host my music for more accessability, <br> but regardless everything i'm working on (including smaller projects) will be always be here on my site as well.
       </p1>
  
   <br><br><br><br> 
@@ -166,7 +166,7 @@ function set_width() {
   
   <p2></p2>
       <br>
-  <p1>heres some</p1><a href="https://help.flourish.studio/article/288-how-to-use-custom-html-and-css#useful-css-properties" target="_blank"><span class="lhover"> free resources for creators</span></a><p1> including VSTs & synths <br> dont pay for things if u dont have to LOL</p1>
+
   
 <br><br><br><br><br><br>
   
@@ -232,13 +232,13 @@ body {
 h1 {
 color: yellow;
 font-family: joystix;
-font-size: 75;
+font-size: 85;
 margin: 10px 5px 10px 5px; 
   }
 h2 {
 color: blue;
 font-family: mpix;
-font-size: 20
+font-size: 50
   }
   h3 {
 color: red;
@@ -248,18 +248,18 @@ font-size: 30
 p1 {
 color: lavender;
 font-family: mpix;
-font-size: 20
+font-size: 40
 
         }
   p2 {
 color: yellow;
 font-family: mpix;
-font-size: 20
+font-size: 24
   }
       p3 {
 color: cyan;
 font-family: mpixtool;
-font-size: 75
+font-size: 95
   }
  
 
