--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <html lang="en"
   <head>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <script type="text/javascript">
 // <![CDATA[
 var speed=40; // lower number for faster
@@ -176,7 +177,11 @@ function set_width() {
 <body style="background-color: black;">
   
   
-			<style>      
+			<style> 
+  @viewport {
+  width: device-width ;
+  zoom: 1.0 ;
+}       
     body {height: 100vh;}
         * {cursor: url(http://www.rw-designer.com/cursor-view/91845.png), default} 
 /* TEXT HIGHLIGHT */
