--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ function set_width() {
   zoom: 1.0 ;
 }       
     body {height: 100vh;}
-        * {cursor: url(http://www.rw-designer.com/cursor-view/91845.png), default} 
+        * {cursor: url(http://www.rw-designer.com/cursor-view/91845.png), auto;} 
 /* TEXT HIGHLIGHT */
         ::selection {
   background: cyan; /* WebKit/Blink Browsers */
